# SabTrace

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/sabtrace/: analyzer.hpp  cli.hpp
src/: analyzer.cpp  cli.cpp  main.cpp
tests/: test_main.cpp
